Add installer info

--- a/README
+++ b/README
@@ -3,4 +3,6 @@ You can set the bot to change your username automatically by adding the informat
 
 Planning on adding more features in the future. 
 Any bugs report them on issues section. 
+
+To install the bot simply download Setup.msi file. Only compatible with windows. 
  
