--- a/README
+++ b/README
@@ -6,3 +6,6 @@ Any bugs report them on issues section.
 
 To install the bot simply download Setup.msi file. Only compatible with windows. 
  
+ 
+ Video of inslation and usability
+ https://www.youtube.com/watch?v=yjXTfeDGmo4
